<resources>
    <string name="app_name" translatable="false">Unfollowers</string>

    <string name="tvLoginHint">Your account</string>
    <string name="etLogin">Username</string>
    <string name="etPassword">Password</string>
    <string name="bLogin">Sign in</string>

    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>

    <string name="menu_log_out">Log out</string>
    <string name="menu_statistic">Statistic</string>

    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="unfollowers">Unfollowers</string>

    <string name="statistic_followers">Followers count\n%1$d</string>
    <string name="statistic_following">Following count\n%1$d</string>
    <string name="statistic_unfollowers">Unfollowers count\n%1$d</string>

    <string name="rate_title">Enjoying this application? Support us by rating in Google Play!</string>
    <string name="rate_later">Later</string>
    <string name="rate_now">Rate now</string>

    <string name="multiple_unfollow">Unfollow first 20 users</string>
    <string name="new_unfollowers_notification">Heads up! You have new unfollowers - %1$d</string>

</resources>
