<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lc_statistic_line"
            android:layout_width="0dp"
            android:layout_height="300dp"
            app:layout_constraintBottom_toTopOf="@id/pc_statistic_pie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pc_statistic_pie"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/tv_statistic_following"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@id/tv_statistic_followers"
            app:layout_constraintTop_toBottomOf="@id/lc_statistic_line" />

        <TextView
            android:id="@+id/tv_statistic_followers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/futurabookc"
            android:gravity="center"
            android:text="@string/statistic_followers"
            android:textColor="@color/followers"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/pc_statistic_pie"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lc_statistic_line" />

        <TextView
            android:id="@+id/tv_statistic_following"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/futurabookc"
            android:gravity="center"
            android:text="@string/statistic_following"
            android:textColor="@color/following"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/pc_statistic_pie"
            app:layout_constraintTop_toBottomOf="@id/lc_statistic_line" />

        <TextView
            android:id="@+id/tv_statistic_unfollowers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/futurabookc"
            android:gravity="center"
            android:text="@string/statistic_unfollowers"
            android:textColor="@color/unfollowers"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pc_statistic_pie" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>